feat: include reward window in rewards response
